<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="395dp"
            android:layout_height="715dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp">
        <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"/>
        <TextView
                android:text="@string/are_we_there_yet"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:id="@+id/txtTitle"
                android:textSize="36sp"
                android:gravity="center"
                android:textStyle="bold"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:id="@+id/etxtMsg"
                android:hint="@string/enter_your_message"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:id="@+id/etxtPhone"
                android:maxLength="10"
                android:hint="@string/xxx_xxx_xxxx"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/etxtNag"
                android:digits="123456789"
                android:hint="@string/how_many_minutes_in_between"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="55dp"/>
        <Button
                android:text="@string/start"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:id="@+id/btnStart"
                android:textSize="24sp"/>
        <Button
                android:text="@string/clear"
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:layout_height="70dp"
                android:id="@+id/btnClear"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>